--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "",
   "version": "0.0.0",
-  "description": "A",
+  "description": "",
   "main": "index.js",
   "repository": "",
   "author": "",
