--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "my-application-name",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -8,8 +8,9 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "lint": "eslint .",
     "start": "webpack-dev-server --open",
-    "test": "jest"
+    "test": "yarn lint && jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -21,8 +22,20 @@
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": ">=4",
     "jest": "^25.1.0",
+    "lint-staged": ">=10",
+    "prettier": "^1.19.1",
     "react-test-renderer": "^16.13.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
@@ -30,8 +43,17 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
