--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "lint": "eslint .",
-    "start": "webpack-dev-server --open",
+    "build": "webpack --mode production",
+    "lint": "eslint . --fix",
+    "start": "webpack-dev-server --mode development --open",
     "test": "yarn lint && jest"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": ">=4",
     "jest": "^25.1.0",
